--- a/eventos_app/pubspec.yaml
+++ b/eventos_app/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   latlong2: ^0.9.1
   firebase_core: ^3.1.0
   json_annotation: ^4.9.0
+  floor: ^1.5.0
+  latlng: ^2.0.7
+  retrofit: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +65,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
-
+  build_runner: ^2.4.2
+  json_serializable: ^6.6.2
+  retrofit_generator: ^6.0.0+2
+  floor_generator: ^1.4.2
+  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
